--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,22 @@
 /target
 /.classpath
+/------
 /.settings
+/bin
+/src/main/webapp/WEB-INF/classes
+/build/dist
+/src/main/webapp/classes
+/build/out
+/.myumldata
+/.tgitconfig
+/pattern
 /.project
+/.springBeans
+/icudt36.dll
+/icuuc36.dll
+/ssoJNI.dll
+/build/bsproject/boccfc-eaijava/.presentation
+/build/bsproject/boccfc-eaijava/.forms
+/build/bsproject/boccfc-eaijava/.iProcessModules
+/.myeclipse
+.folder
