--- a/pom.xml
+++ b/pom.xml
@@ -219,7 +219,11 @@
 		  <artifactId>jackson-annotations</artifactId>  
 		  <version>2.6.3</version>
 		  </dependency>
-		  
+		  <dependency>
+			<groupId>com.jfinal</groupId>
+			<artifactId>jfinal</artifactId>
+			<version>3.2</version>
+		</dependency>
 
 		
   </dependencies>
