--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://127.0.0.1:3306/ffms?useUnicode=true&characterEncoding=utf8&amp;allowMultiQueries=true
 username=root
-password=66666
+password=root1234
