修改pom和首页后台修改，支付功能提交（待测）

--- a/src/main/resources/front.properties
+++ b/src/main/resources/front.properties
@@ -1,2 +1,5 @@
 ad.good.lunbo.times=4
-ad.good.pic.parent.path=/resource/goodPicture/
+index.hot.good.times=6
+index.handPicked.good.times=10
+index.new.good.times=6
+ad.good.pic.parent.path=resource/goodPicture/
