--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <properties>
+  	<springVersion>4.2.4.RELEASE</springVersion>
+  </properties>
+  
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.finance</groupId>
   <artifactId>ffms</artifactId>
@@ -40,31 +44,31 @@
 	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-context</artifactId>
-	    <version>3.1.1.RELEASE</version>
+	    <version>${springVersion}</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
 	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-webmvc</artifactId>
-	    <version>3.1.1.RELEASE</version>
+	    <version>${springVersion}</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.springframework/spring-orm -->
 	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-orm</artifactId>
-	    <version>3.1.1.RELEASE</version>
+	    <version>${springVersion}</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.springframework/spring-asm -->
 	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-asm</artifactId>
-	    <version>3.1.1.RELEASE</version>
+	    <version>3.1.0.RELEASE</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.springframework/spring-aspects -->
 	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-aspects</artifactId>
-	    <version>3.1.1.RELEASE</version>
+	    <version>${springVersion}</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/ognl/ognl -->
 	<dependency>
@@ -77,6 +81,18 @@
 	    <groupId>org.slf4j</groupId>
 	    <artifactId>slf4j-api</artifactId>
 	    <version>1.6.6</version>
+	</dependency>
+	
+	<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${springVersion}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>commons-logging</artifactId>
+					<groupId>commons-logging</groupId>
+				</exclusion>
+			</exclusions>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
 	<dependency>
