--- a/src/main/resources/wx.properties
+++ b/src/main/resources/wx.properties
@@ -1,3 +1,6 @@
 wxgz.token=mozhenyi
 wxgz.appID=wx3b0a568d7a54ac29
 wxgz.appSecret=ce3249ee898d6028c5344c367a76eefc
+wxgz.pay.mchId=123
+wxgz.pay.paternerKey=123
+wxgz.pay.noticeUrl=123
