--- a/pom.xml
+++ b/pom.xml
@@ -247,5 +247,33 @@
        <artifactId>ehcache</artifactId>
        <version>2.10.2</version>
    </dependency>
+   <!--httputil -->
+   <dependency> 
+         <groupId>org.apache.httpcomponents</groupId> 
+          <artifactId>httpclient</artifactId> 
+         <version>4.1.2</version>         
+        </dependency> 
+        <dependency> 
+         <groupId>org.apache.httpcomponents</groupId> 
+          <artifactId>httpclient-cache</artifactId> 
+         <version>4.1.2</version>         
+        </dependency> 
+        <dependency> 
+         <groupId>org.apache.httpcomponents</groupId> 
+          <artifactId>httpmime</artifactId> 
+         <version>4.1.2</version>         
+  </dependency>
+   
+   
+   <dependency>
+			<groupId>com.twelvemonkeys.imageio</groupId>
+			<artifactId>imageio-core</artifactId>
+			<version>3.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.twelvemonkeys.imageio</groupId>
+			<artifactId>imageio-jpeg</artifactId>
+			<version>3.2.1</version>
+		</dependency>
   </dependencies>
 </project>
