--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <properties>
   	<springVersion>4.2.4.RELEASE</springVersion>
+  	 <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+  
   
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.finance</groupId>
