--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <properties>
   	<springVersion>4.2.4.RELEASE</springVersion>
-  	 <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
-  
+  <build>
+        <finalName>ffms</finalName>
+  </build>
   
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.finance</groupId>
@@ -62,11 +62,11 @@
 	    <version>${springVersion}</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.springframework/spring-asm -->
-	<dependency>
+	<!-- <dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-asm</artifactId>
-	    <version>3.1.0.RELEASE</version>
-	</dependency>
+	    <version>4.2.4.RELEASE</version>
+	</dependency> -->
 	<!-- https://mvnrepository.com/artifact/org.springframework/spring-aspects -->
 	<dependency>
 	    <groupId>org.springframework</groupId>
