--- a/src/main/resources/wx.properties
+++ b/src/main/resources/wx.properties
@@ -1,6 +1,6 @@
-wxgz.token=mozhenyi
-wxgz.appID=wx3b0a568d7a54ac29
-wxgz.appSecret=ce3249ee898d6028c5344c367a76eefc
+wxgz.token=xinliceshi
+wxgz.appID=wx32bd676f7716f335
+wxgz.appSecret=f7b0e8341b1fe7e2d8c2a508814276ef
 wxgz.pay.mchId=123
 wxgz.pay.paternerKey=123
 wxgz.pay.noticeUrl=123
