--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,12 @@
 	    <artifactId>slf4j-api</artifactId>
 	    <version>1.6.6</version>
 	</dependency>
-	
+	<dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.5</version>
+    </dependency>
+    
 	<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
@@ -98,12 +103,12 @@
 			</exclusions>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
-	<dependency>
+<!-- 	<dependency>
 	    <groupId>org.slf4j</groupId>
 	    <artifactId>slf4j-log4j12</artifactId>
 	    <version>1.6.6</version>
 	    <scope>test</scope>
-	</dependency>
+	</dependency> -->
 	<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
 	<dependency>
 	    <groupId>org.mybatis</groupId>
@@ -278,5 +283,38 @@
 			<artifactId>imageio-jpeg</artifactId>
 			<version>3.2.1</version>
 		</dependency>
+		
+
+    <dependency>
+      <groupId>com.github.binarywang</groupId>
+      <artifactId>weixin-java-mp</artifactId>
+      <version>2.8.0</version>
+    </dependency>
+
+ 
+    
+       <!-- okhttp2 -->
+    <dependency>
+      <groupId>com.squareup.okhttp</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>2.7.5</version>
+    </dependency>
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>3.8.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.squareup.okio</groupId>
+      <artifactId>okio</artifactId>
+      <version>1.11.0</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>com.github.javen205</groupId>
+      <artifactId>IJPay</artifactId>
+      <version>0.6</version>
+    </dependency>
+		
   </dependencies>
 </project>
