--- a/src/main/resources/wx.properties
+++ b/src/main/resources/wx.properties
@@ -1,6 +1,6 @@
 wxgz.token=xinliceshi
-wxgz.appID=wx32bd676f7716f335
-wxgz.appSecret=f7b0e8341b1fe7e2d8c2a508814276ef
-wxgz.pay.mchId=123
+wxgz.appID=wxacd2acc6a5d75da7
+wxgz.appSecret=708a5ea0f084e10c4150021904e384ec
+wxgz.pay.mchId=10031520
 wxgz.pay.paternerKey=123
-wxgz.pay.noticeUrl=123
+wxgz.pay.noticeUrl=http\://jinbang888.viphk.ngrok.org/ffms/wx/orderNotify.do
