--- a/src/main/resources/wx.properties
+++ b/src/main/resources/wx.properties
@@ -3,4 +3,4 @@ wxgz.appID=wxacd2acc6a5d75da7
 wxgz.appSecret=de1db220774563f0e9cf5dc817469a17
 wxgz.pay.mchId=10031520
 wxgz.pay.paternerKey=123
-wxgz.pay.noticeUrl=http\://jinbang888.viphk.ngrok.org/ffms/wx/orderNotify.do
+wxgz.pay.noticeUrl=http\://xiaoka.2liang.net/ffms/front/wx/orderNotify.do
