支付功能修改

--- a/src/main/resources/front.properties
+++ b/src/main/resources/front.properties
@@ -3,3 +3,4 @@ index.hot.good.times=6
 index.handPicked.good.times=10
 index.new.good.times=6
 ad.good.pic.parent.path=/resource/goodPicture/
+fix.gift.num=1,2,3,5,10,15,20
