--- a/src/main/resources/wx.properties
+++ b/src/main/resources/wx.properties
@@ -1,6 +1,11 @@
+#produce
 wxgz.token=xinliceshi
 wxgz.appID=wxacd2acc6a5d75da7
 wxgz.appSecret=de1db220744563f0e9cf5dc817469a17
+#test
+#wxgz.token=mozhenyi
+#wxgz.appID=wx3b0a568d7a54ac29
+#wxgz.appSecret=ce3249ee898d6028c5344c367a76eefc
 wxgz.pay.mchId=10031520
 wxgz.pay.paternerKey=bIJHapQ0YCUranRlO1cmUNrxj1jMFP6p
 wxgz.pay.noticeUrl=http\://xiaoka.2liang.net/ffms/front/wx/orderNotify.do
