--- a/src/main/resources/wx.properties
+++ b/src/main/resources/wx.properties
@@ -1,11 +1,11 @@
 #produce
 wxgz.token=xinliceshi
-wxgz.appID=wxacd2acc6a5d75da7
-wxgz.appSecret=de1db220744563f0e9cf5dc817469a17
+wxgz.appID=wxac31e7d262b6c7b5
+wxgz.appSecret=708a5ea0f084e10c4150021904e384ec
 #test
 #wxgz.token=mozhenyi
 #wxgz.appID=wx3b0a568d7a54ac29
 #wxgz.appSecret=ce3249ee898d6028c5344c367a76eefc
-wxgz.pay.mchId=10031520
-wxgz.pay.paternerKey=bIJHapQ0YCUranRlO1cmUNrxj1jMFP6p
-wxgz.pay.noticeUrl=http\://xiaoka.2liang.net/ffms/front/wx/orderNotify.do
+wxgz.pay.mchId=1226443102
+wxgz.pay.paternerKey=salfaGFLHLJ8520398hHljl909808070
+wxgz.pay.noticeUrl=http\://www.3k3k.net/ffms/front/wx/orderNotify.do
